--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <commons-codec.version>1.6</commons-codec.version>
         <config.version>0.4.0</config.version>
         <dispatch.version>0.11.2</dispatch.version>
+        <h2-connector.version>1.3.176</h2-connector.version>
         <jetty.version>7.6.3.v20120416</jetty.version>
         <jetty-webapp.version>8.1.7.v20120910</jetty-webapp.version>
         <jetty-maven-plugin.version>8.1.5.v20120716</jetty-maven-plugin.version>
@@ -51,6 +52,11 @@
             <groupId>com.typesafe</groupId>
             <artifactId>config</artifactId>
             <version>${config.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2-connector.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
