--- a/pom.xml
+++ b/pom.xml
@@ -5,24 +5,20 @@
     <artifactId>tinydvr</artifactId>
     <version>0.0.1</version>
     <name>TinyDVR</name>
-    <description>Small and simple dvr backend.</description>
+    <description>Small and simple dvr.</description>
     <inceptionYear>2014</inceptionYear>
     <packaging>war</packaging>
+
+    <!-- Properties (inherited by modules) -->
     <properties>
         <encoding>UTF-8</encoding>
-        <commons-codec.version>1.6</commons-codec.version>
+
+        <!-- Plugin Versions-->
         <config.version>0.4.0</config.version>
-        <dispatch.version>0.11.2</dispatch.version>
         <h2-connector.version>1.3.176</h2-connector.version>
-        <jetty.version>7.6.3.v20120416</jetty.version>
-        <jetty-webapp.version>8.1.7.v20120910</jetty-webapp.version>
-        <jetty-maven-plugin.version>8.1.5.v20120716</jetty-maven-plugin.version>
-        <joda-time.version>2.0</joda-time.version>
-        <joda-convert.version>1.1</joda-convert.version>
-        <lift.version>2.5.1</lift.version>
+        <httpclient.version>4.3.2</httpclient.version>
+        <jetty-servlet.version>8.1.7.v20120910</jetty-servlet.version>
         <logback.version>0.9.29</logback.version>
-        <maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
-        <netty.version>3.7.1.Final</netty.version>
         <scala.version>2.10.4</scala.version>
         <scala.majorVersion>2.10</scala.majorVersion>
         <scalatra.version>2.1.2</scalatra.version>
@@ -30,12 +26,28 @@
         <servlet-api.version>3.0.1</servlet-api.version>
         <slf4j.version>1.6.1</slf4j.version>
         <squeryl.version>0.9.5-6</squeryl.version>
+
+        <!-- Maven plugin versions -->
+        <exec-maven-plugin.version>1.1</exec-maven-plugin.version>
+        <jetty-maven-plugin.version>8.1.5.v20120716</jetty-maven-plugin.version>
+        <lifecycle-mapping-plugin.version>1.0.0</lifecycle-mapping-plugin.version>
+        <maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
+        <maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
+        <maven-deploy-plugin.version>2.8.1</maven-deploy-plugin.version>
+        <maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
+        <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
+        <maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
+        <scalastyle-maven-plugin.version>0.5.0</scalastyle-maven-plugin.version>
+        <scala-maven-plugin.version>3.1.6</scala-maven-plugin.version>
+        <versions-maven-plugin.version>2.1</versions-maven-plugin.version>
+
+        <!-- Common plugin settings -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
+
         <!-- Property in each POM pointing to the project root. -->
         <main.rootdir>${project.basedir}</main.rootdir>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <plugin.scala-maven-plugin.version>3.1.1</plugin.scala-maven-plugin.version>
-        <plugin.maven-resources-plugin.version>2.4.2</plugin.maven-resources-plugin.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
     </properties>
     <dependencies>
         <dependency>
@@ -63,53 +75,6 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>${servlet-api.version}</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>${joda-time.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>net.databinder.dispatch</groupId>
-            <artifactId>dispatch-core_${scala.majorVersion}</artifactId>
-            <version>${dispatch.version}</version>
-        </dependency>
-        <!-- Lift-JSON -->
-        <dependency>
-            <groupId>net.liftweb</groupId>
-            <artifactId>lift-json_${scala.majorVersion}</artifactId>
-            <version>${lift.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.scala-lang</groupId>
-                    <artifactId>scala-library</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.scala-lang</groupId>
-                    <artifactId>scalap</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>${commons-codec.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-server</artifactId>
-            <version>${jetty.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-webapp</artifactId>
-            <version>${jetty-webapp.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.joda</groupId>
-            <artifactId>joda-convert</artifactId>
-            <version>${joda-convert.version}</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -148,7 +113,7 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>${plugin.scala-maven-plugin.version}</version>
+                <version>${scala-maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>default</id>
@@ -180,43 +145,11 @@
                 <version>${maven-compiler-plugin.version}</version>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>${plugin.maven-resources-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>default-copy-resources</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <overwrite>true</overwrite>
-                            <outputDirectory>${project.build.directory}</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>${project.basedir}/src</directory>
-                                    <includes>
-                                        <include>packageLinkDefs.properties</include>
-                                    </includes>
-                                    <filtering>true</filtering>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>${jetty-maven-plugin.version}</version>
                 <configuration>
                     <scanIntervalSeconds>1</scanIntervalSeconds>
-                    <connectors>
-                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-                            <port>12345</port>
-                        </connector>
-                    </connectors>
                 </configuration>
             </plugin>
         </plugins>
